# ToggleMesh

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ToggleMesh.sln  docker-compose.dev.yml  docker-compose.enterprise.yml  docker-compose.yaml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: publish_cli.yml  publish_sdk.yml
benchmarks/ToggleMesh.Benchmarks/: IsEnabledBenchmark.cs  Program.cs  ToggleMesh.Benchmarks.csproj
benchmarks/ToggleMesh.LoadTests/: config.js  events_ingest.js  get_flags.js  metrics_ingest.js  remote_evaluate.js
docker/clickhouse/: init.sql
samples/ToggleMesh.ConsoleClient/: EnterpriseSimulationWorker.cs  EnterpriseWorker.cs  MabSimulationWorker.cs  Program.cs  ShowcaseWorker.cs  ToggleMesh.ConsoleClient.csproj  ToggleMeshFlags.g.cs  Worker.cs  appsettings.json
samples/ToggleMesh.HtmlClient/: index.html
sdks/go/: README.md  go.mod  go.sum
sdks/js-cli/: .gitignore  README.md  package.json
sdks/js-client/: README.md  example-mab.js  example.js  package.json  tsconfig.json
sdks/node/: README.md  example-mab.js  example.js  package-lock.json  package.json  tsconfig.json
sdks/python/: .gitignore  README.md  example-mab.py  example.py  pyproject.toml
sdks/python/tests/: test_universal.py
sdks/python/togglemesh/: __init__.py  cli.py  client.py  models.py  operators.py  rules.py
sdks/unreal/: README.md
src/ToggleMesh.API/: Dockerfile  Program.cs  ToggleMesh.API.csproj  appsettings.Development.json  appsettings.json
(+1024 files in other folders)
