[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "togglemesh"
version = "0.3.2"
description = "ToggleMesh Python SDK"
readme = "README.md"
authors = [
  { name="sdwck" },
]
dependencies = [
    "requests>=2.25.0",
    "packaging>=21.3",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/sdwck/ToggleMesh"
"Repository" = "https://github.com/sdwck/ToggleMesh"
"Bug Tracker" = "https://github.com/sdwck/ToggleMesh/issues"

[project.scripts]
togglemesh = "togglemesh.cli:main"
